--- a/index.html
+++ b/index.html
@@ -4,27 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>Gerador de Senhas</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js" defer></script>
 </head>
 <body>
-    <header>
-        <title>Segurança em Primeiro Lugar!</title>
-    </header>
     <main>
         <div class="caixa">
-            <h1>Gerador Automático de Senhas</h1>
-            <imput type="text" placeholder="Crie uma Senha" id="senha">
+            <h2>Gerador Automático de Senhas</h2>
+            <input type="text" placeholder="Crie uma Senha" id="senha">
                 <table>
                     <th>
                         <div id="button" class="btn1" onclick="gerarSenha()">Gerar</div>
                     </th>
-                    <th>
-                        <a id="button" class="btn2" onclick="copiarSenha()">Copiar</a>
-                    </th>
+                    <th><a id="button" class="btn2" onclick="copiarSenha()">Copiar</a></th>
                 </table>
         </div>
     </main>
-    <script src="main.js"></script>
 </body>
 </html>
