Iniciando o JavaScript e alguns ajustes no CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="caixa">
             <h2>Gerador Automático de Senhas</h2>
-            <input type="text" placeholder="Crie uma Senha" id="senha">
+            <input type="text" placeholder="Crie uma senha" id="senha">
                 <table>
                     <th>
                         <div id="button" class="btn1" onclick="gerarSenha()">Gerar</div>
